FIX: layout issue on 404

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,7 +670,7 @@ ul {
     text-align:center;  
 }
 
-#lost-form {
+#lost-page nav {
     margin-bottom: 100px;
 }
 
